--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -15,3 +15,8 @@ framework:
     #fragments: true
     php_errors:
         log: true
+
+    http_client:
+        scoped_clients:
+            client_json:
+                base_uri: 'http://127.0.0.1:1234/composer.json'
