--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "symfony/dotenv": "^5.1",
         "symfony/yaml": "^5.1",
         "symfony/console": "^5.1",
-        "symfony/monolog-bundle": "^3.5"
+        "symfony/monolog-bundle": "^3.5",
+        "symfony/property-access": "^5.1",
+        "symfony/expression-language": "^5.1"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.20",
